grammatiche produzioni e derivazioni

--- a/Compilers/Frontend/6.grammatiche.md
+++ b/Compilers/Frontend/6.grammatiche.md
@@ -1,2 +1,56 @@
 # Grammatiche:
 
+Una grammatica G è una quadrupla di elementi
+
+$$
+
+G(N,T,P,S)
+
+$$
+
+dove:
+- $P$ : Insieme delle produzioni: $X\rightarrow Y, (X,Y \in N\cup T)$
+- $S$ : Assioma della grammatica (simbolo iniziale)
+- $N$ : Insieme dei caratteri non terminali 
+- $T$ : Insieme dei caratteri terminali   
+
+I caratteri maiuscoli $X \in N$ mentre i minuscoli $x\in T$  
+L'insieme $V = N\cup T$ è il **vocabolario della grammatica**
+
+
+## Struttura delle produzioni:
+
+Le Produzioni caratterizzano la capacità espressiva di una grammatica
+
+**Grammatica Lineare Destra:** $A \rightarrow xB \space |\space A\rightarrow x$
+
+**Grammatica Lineare Sinistra:** $A \rightarrow Bx \space |\space A\rightarrow x$
+
+Se una grammatica è Lineare DX o SX allora viene detta _grammatica regolare_.  
+
+### Grammatica Libera:  
+
+Per definire la sintassi e la grammatica dei linguaggi di programmazione non bastano le grammatiche regolari, servono le **Grammatiche Libere**.  
+
+$$
+
+A\rightarrow \alpha\space\space\space\space   A\in N,\space\space\space \alpha \in {V}^*
+
+$$
+
+
+**Grammatica Libera vs Grammatica Regolare**
+
+- **Regolare**: Permette solo produzioni 'singole' (lineari), ossia produzioni il cui risultato può avere massimo un Non terminale!
+
+- **Libera**: Permette produzioni generali con $n$ simboli Non terminali!
+
+## Derivazioni:
+
+Le derivazioni sono il processo mediante il quale applicando un numero di produzioni a partire dall'assioma, otteniamo una stringa di soli terminali.  
+
+Una derivazione è quindi composta da più applicazioni di produzioni, ossia da tante sequenze intermedie.  
+
+- **Forme di Frase:** Esiste almeno un non terminale 
+- **Frase del Linguaggio:** sequenza composta da soli caratteri terminali
+
