--- a/Compilers/Frontend/6.grammatiche&parseTree.md
+++ b/Compilers/Frontend/6.grammatiche&parseTree.md
@@ -159,3 +159,4 @@ Per cercare di alleviare a tale conseguenza si possono introdurre nella grammati
 - Ricostruire una grammatica Lineare DX(|SX) da automa 
 - Costruire un AFND da una grammatica lineare DX(|SX)
 
+Parti mancanti -> consultare quaderno di compilatori 
