--- a/Compilers/Frontend/6.grammatiche&parseTree.md
+++ b/Compilers/Frontend/6.grammatiche&parseTree.md
@@ -88,7 +88,7 @@ Es: Parse Tree per la frase `number x (number + number)` da $G_{expr1}$
 Tornando al discorso di prima, introduciamo la necessità di eliminare le ambiguità e indeterminaztezza, in quanto ad una frase potrebbero corrispondere più parse tree.  
 Infatti le grammatiche libere sono spesso ambigue, questo significa che una stessa frase potrebbe essere derivata in modi diversi, e modi diversi di derivare una stessa frase producono parse tree diversi per la stessa.  
 
-**In realtà** ciò che conta sono i parse tree in relazione alle _derivazioni delle frasi_ pouttosto che alle frasi.  
+**In realtà** ciò che conta sono i parse tree in relazione alle _derivazioni delle frasi_ piuttosto che alle frasi.  
 
 es: Per la frase `number x (number + number)` esistono almeno due derivazioni diverse:
 
@@ -142,7 +142,7 @@ Il parsing risulta più complicato per grammatiche di questo tipo, esistono algo
 - **Possibilità di cicli o ricorsioni:**  
     I cicli sono derivazioni del tipo $A {\Rightarrow}^+ A$ o comunque di _left recursion_ $A\Rightarrow^+ A\alpha$ con $\alpha \neq \epsilon$
 
-- **Presenza di prefissi comuni a due o più produzioni relative allo stesso non terminale:**
+- **Presenza di prefissi comuni a due o più produzioni relative allo stesso non terminale:**  
     $A \rightarrow \alpha\beta _1$ e $A \rightarrow \alpha\beta _2$ con $\alpha = \alpha$ e $\beta _1 \neq \beta _2$
 
 
@@ -158,5 +158,3 @@ Per cercare di alleviare a tale conseguenza si possono introdurre nella grammati
 
 - Ricostruire una grammatica Lineare DX(|SX) da automa 
 - Costruire un AFND da una grammatica lineare DX(|SX)
-
-Parti mancanti -> consultare quaderno di compilatori 
