--- a/Compilers/MiddleEnd/1.Anatomia_Compilatore.md
+++ b/Compilers/MiddleEnd/1.Anatomia_Compilatore.md
@@ -160,3 +160,5 @@ Il <span style="color:red;">Middle End</span> è l'ottimizzatore ed è la compon
 - Per supportare una nuova ISA basta scrivere un nuovo BE che la supporti
 
 ![middleEnd](../../images/middleEndisKey.png)
+
+slide parti introduttiva e prima lezione
