minor typos and format fixed

--- a/Compilers/MiddleEnd/3.LocalValueNumbering(LVN).md
+++ b/Compilers/MiddleEnd/3.LocalValueNumbering(LVN).md
@@ -26,7 +26,7 @@ main(){
 }
 ```
 
-Dopo ogni istruzione teniamo traccia delle variabili che sono state definite, ma non usate $\rightarrow$ se vediamo un altro assegnamento della stessa var prima do aver raggounto la fine del blocco sappiamo che l'istruzione precedente che contiene tale var può essere eliminata.
+Dopo ogni istruzione teniamo traccia delle variabili che sono state definite, ma non usate $\rightarrow$ se vediamo un altro assegnamento della stessa var prima di aver raggiunto la fine del blocco sappiamo che l'istruzione precedente che contiene tale var può essere eliminata.
 
 ```python
 last_def = {}
@@ -50,7 +50,7 @@ Estendiamo il nostro esempio a diverse forme di ottimizzazione locale, cosa hann
 
 Quelle sopra sono 3 diverse forme di ridondanza e la causa di tale è proprio il fatto che la computazione si focalizzi sulle **variabili** e non sui **valori**. Se ci focalizziamo su quest'ultimo la rimozione di tali ridondanze diventa automatica.
 
-Il **_Local Value Numbering_** è una tecnica che ci permette di approcciare problemi di ottimizzazione con un focus sui **valori** piuttosto che sulle variabili.
+La **_Local Value Numbering_** $(LVN)$ è una tecnica che ci permette di approcciare problemi di ottimizzazione con un focus sui **valori** piuttosto che sulle variabili.
 
 Si parte costruendo una struttura dati di tipo tabella che ci aiuta a riscrviere le istruzioni in funzione di valori precedentemente osservati.
 
@@ -58,3 +58,9 @@ Si parte costruendo una struttura dati di tipo tabella che ci aiuta a riscrviere
 Una volta completata la tabella del LVN basterà leggere la tabella per ricostruire le istruzioni del programma ottimzzate.
 
 _attenzione:_ Prestare attenzioni a casi come la proprietà commutativa dell'addizione, che potrebbe rompere l'algoritmo se non canonicalizzato.
+
+
+
+Extra: Call Graph -> vera ottimizzazione globale,che prende il nome di ottimizzazione **interprocedurale**, corrisponde in un grafo che rappresenta l'interazione tra le varie funzioni del sorgente originale. Molto utile per ottimizzazioni come function inlining e l'eliminazione di funzioni non utilizzate. 
+Per poter fare un ottimizzazione di questo livello risultano propedeutiche le ottimizzazioni locali (singolo BB) e ottimizzazioni globali (CFG, globale allo scope della funzione attualmente analizzata).  
+
