--- a/Compilers/MiddleEnd/5.Loops.md
+++ b/Compilers/MiddleEnd/5.Loops.md
@@ -1,6 +1,6 @@
 # Loops e UD-DU Chains:
 
-Ricordiamo che i `Loop` sono fondamentali pre i passi di ottimizzazione MiddleEnd in quanto i programmi spendono la maggior parte del loro tempo dentro ad essi.
+Ricordiamo che i `Loop` sono fondamentali per i passi di ottimizzazione MiddleEnd in quanto i programmi spendono la maggior parte del loro tempo dentro ad essi.
 
 **Obiettivo:** $\rightarrow$ Definire un Loop in termini di `GraphTheory` (CFG)
 
