--- a/Compilers/MiddleEnd/7.Ottimizzazioni_Memoria.md
+++ b/Compilers/MiddleEnd/7.Ottimizzazioni_Memoria.md
@@ -5,11 +5,11 @@
 **Tecnologia DRAM (Dynamic RAM):**
 Conserva i dati in binario sotto forma di carica in un condensatore, l'accesso ai dati avviene tramite un singolo transistor, deve essere periodicamente refreshata, pena la perdita di dati (dovuta alla dissipazione della carica).
 
-La RAM è strutturata come una matrice, e gli accessi aidati avvengono su intere righe per compensare la latenza di accesso.  
+La RAM è strutturata come una matrice, e gli accessi ai dati avvengono su intere righe per compensare la latenza di accesso.  
 Le prestazioni della RAM sono migliorate nel tempo, grazie anche a nuove tecniche di trasferimento dati (DDR - double data rate; QDR - quad data rate, dove con data rate si intendono i fronti di clock).
 
 **Tecnologia SRAM(Static RAM):**
-È una memoria composta da celle elementari di transistor MOS formando un flip-flop, la memoria SRAM è satbile finchè alimentata e di solito è la memoria che troviamo integrata nelle CPU.
+È una memoria composta da celle elementari di transistor MOS formando un flip-flop, la memoria SRAM è stabile finchè alimentata e di solito è la memoria che troviamo integrata nelle CPU.
 È veloce quasi quanto una CPU, quindi ordini di grandezza sopra la DRAM, ma è anche estremamente costosa e densa, quindi molto limitante e rara.
 
 ![dram](../../images/DRAM.png)
@@ -29,11 +29,11 @@ lo schema di livelli tipicamente seguito è:
 
 # Principio di Località:
 
-È il principio che descrive il comportamento degli acceso alla memoria dei programmi:
-- **Località Temporale:** 
-    Se un dato è stato recentemente accesso, è probabile che venga accesso di nuovo nel prossimo futuro $\rightarrow$ giustifica l'uso delle cache.  
+È il principio che descrive il comportamento degli accessi alla memoria dei programmi:
+- **Località Temporale:**   
+    Se un dato è stato recentemente acceduto, è probabile che venga acceduto di nuovo nel prossimo futuro $\rightarrow$ giustifica l'uso delle cache.  
 - **Località Spaziale:**   
-    Se un dato è stato recentemente accesso, è probabile che i dati a lui vicini vengano accessi a breve $\rightarrow$ le cache sfruttano questo principio caricando dalla RAM blocchi di dati contigui al posto di un singolo dato.  
+    Se un dato è stato recentemente acceduto, è probabile che i dati a lui vicini vengano acceduti a breve $\rightarrow$ le cache sfruttano questo principio caricando dalla RAM blocchi di dati contigui al posto di un singolo dato.  
 
 
 
@@ -46,22 +46,22 @@ Con il termine _`word`_ si intende l'unità di base che il processore di un comp
 
 Le Cache sono piccoli blocchi di memoria veloce posti tra la CPU e la memoria principale per valocizzare l'accesso ai dati usati frequentemente, il processore richiede un dato e la prima memoria che consulterà sarà la L1 cache, che potrebbe contenere o meno il dato.   
 Se il dato richiesto dal processore non è nella cache si ha una **cache miss**, ne esistono di 3 tipi:
-1. **Coompulsory Miss:** Accade quando la cache è fredda e deve essere inizializzata, non esistono ancora dati in cache!  
+1. **Compulsory Miss:** Accade quando la cache è fredda e deve essere inizializzata, non esistono ancora dati in cache!  
 2. **Conflict Miss:** Si verifica quando due indirizzi diversi mappano sulla stessa linea di cache e competono per lo stesso spazio, questo dovuto al fatto che le dimensioni della cache siano ridotte rispetto a quelle della RAM e quindi più inidirizzi vengono mappati sulla stessa riga con la speranza che non vengano acceduti uno dietro l'altro.  
 3. **Capacity Miss:** Avviene quando la cache esaurisce lo spazio a disposizione, forza l'evizione di alcuni dati per fare posto a nuovi dati.  
 
 
 ### Cache Summary:
-- Cache Hit:  
-    Dato richiesto trovato in cache, cheap cost
+- Cache Hit:    
+    - Dato richiesto trovato in cache, cheap cost
 - Cache Miss:  
-    Dato non in cache, costo expensive; cerca dato nei livelli inferiori  
+    - Dato non in cache, costo expensive; cerca dato nei livelli inferiori  
 - Cache Line:  
-    Numero di byte caricati insieme per entry  
+    - Numero di byte caricati insieme per entry  
 - Cache Capacity:   
-    Quantità di dati che può essere contenuta simultaneamente in cache  
+    - Quantità di dati che può essere contenuta simultaneamente in cache  
 - Associativity:    
-    Direct mapped vs n-way associative
+    - Direct mapped vs n-way associative  
 
 <br><br>
 
