parsing notes updated

--- a/Compilers/Frontend/7.parsing(1).md
+++ b/Compilers/Frontend/7.parsing(1).md
@@ -1,7 +1,6 @@
 
 # Parsing (1)
  
-Mini expl
 
 ## Generalità sul Parsing 
 
@@ -21,7 +20,7 @@ I parser vengono classificiati in accordo all'ordine di costruzione del parse tr
 - Parser **Shift-Reduce**  $\rightarrow$ Bottom Up.  
 
 ### Scelta della produzione:
-Al generico passo di derivazione o riduzione, il aprser deve decidere quale produzione della grammatica utlizzare.  
+Al generico passo di derivazione o riduzione, il parser deve decidere quale produzione della grammatica utlizzare.  
 Tale scelta viene fatta in base allo **stato interno del parser** e dal **Lookahead**.  
 - Stato interno del parser $\rightarrow$ informazione memorizzata nella cima di una struttura dati `Stack`.  
 - Il numero di token considerati per prendere la decisione è noto come Lookahead, in generale interessano valori di LookAhead limitati [0 o 1].  
@@ -71,9 +70,60 @@ Questi tipi di Parser (a discesa ricorsiva) sono estremamente sensibili e inadat
 
 ## Eliminazione delle ricorsioni sinistre
 
+Per eliminare le ricorsioni sinistre riscriviamo la grammatica imponendo le seguenti condizioni: 
+- La grammatica non contiene riscritture $A\rightarrow \epsilon$ e non ammette cicli.    
+- Alla fine si aggiunge la produzione $S\rightarrow \epsilon$
+
+Sia $A_1,...,A_n$ un ordinamento dei simboli non terminali, otteniamo una grammatica tale per cui ogni riscrittura del tipo:
+- $A_i \rightarrow A_j\alpha$   con: 
+    - $i \lt j$ `ForwardProduction`
+    - $i \gt j$ `BackwardProduction`
+
+Supponiamo che per il non terminale $A$, siano presenti le seguenti produzioni:  
+
+<center>
+
+$A\rightarrow A\alpha_1|...|A\alpha_t|\beta_1|...|\beta_m$
+
+</center>
+
+
+In cui nessuna stringa $\beta_s, \space s=1,...,m$ inizia per $A$.  
+Diremo allora che **l'eliminazione** di $A$ in una derivazione richiede che prima o poi si usi una produzione $A\rightarrow\beta_s$  
+Alla luce di questa osservazione constatiamo che le produzioni per $A$ possono essere eliminate in una derivazione prevedendo:
+1. Le sostituzioni con le sequenze $\beta_s$ 
+2. Inserendo un numero aribtrario di sequenze $a_r$ utilizzando un nuovo non terminale (che chiameremo $A'$)
+
+<center>
+
+$A\rightarrow \beta_1A'|\beta_2A'|...|\beta_mA'$ 
+
+<br>
+
+$A'\rightarrow \alpha_1A'|\alpha_2A'|...|\alpha_tA'|\epsilon$
+
+</center>
+
+## Eliminazione delle BackwardProduction
+
+L'eliminazione delle BackwardProduction si basa su un ragionamento ricorsivo:    
+Se ordiniamo i terminali, notiamo che per $A_1$ **non può esserci** una backProd (al massimo potrebbe esserci una ricorsione diretta, che è eliminabile dal metodo sopra menzionato).  
+
+Questa è la base del ragionamento ricorsivo e quindi diremo che per un dato indice $i \ge 2$ per i primi $i-1$ non terminali non ci siano backProd.  
+
+Consideriamo il non terminale $A_i$ e supponiamo che una delle sue produzioni sia backward: 
+
+$$
+A_i\rightarrow A_j\alpha|...\space\space\space\space\space j \lt i
+$$  
+
+Diremo allora che la produzione $A_i\rightarrow A_j\alpha$ può essere eliminata (manualmente) inserendo esplicitamente al posto di $A_j$ una ad una tutte le parti destre della sua produzione.  
+Se avessimo $A_j\rightarrow \beta_1|...|\beta_m$, allora $A_i$ avrebbe le produzioni: 
+$$
+A_i \rightarrow \beta_1\alpha|\beta_2\alpha|...|\beta_m\alpha
+$$
 
 
 
-
-
+# Parser Predittivi: 
 
