parsing (first and follow rules added)

--- a/Compilers/Frontend/7.parsing(1).md
+++ b/Compilers/Frontend/7.parsing(1).md
@@ -127,3 +127,59 @@ $$
 
 # Parser Predittivi: 
 
+I parser predittivi usano un certo numero di caratteri di LookAhead per deidere la prossima produzione da utilizzare. Questa strada può essere percorsa a seconda di come è strutturata la grammatica.  
+
+Un parser predittivo può essere agevolmente realizzato per grammatiche di tipo ***LL(1)***.  
+LL(1) $\rightarrow$ Indica che input letto da sinistra, un carattere solo di lookahead e la derivazione prodotta è canonica sinistra.    
+
+Se una grammatica ha ricorsioni sinistre o prefissi comununi allora il numero di caratteri di lookahead non è limitabile, e tali tipi di grammatiche non potranno mai essere LL($k$) per nessun $k$.  
+
+
+## Condizioni per avere grammatica LL(1)
+
+Supponiamo di aver effettuato $i$ riscritture e ottenuto una forma di frase $a_i$ in cui i primi $k$ simboli sono terminali che coincidono con i primi $k$ simboli di input.  
+
+Riscriviamo $a_i$ come segue:
+$$
+a_i = a_1a_2...a_kA\beta 
+$$
+
+Il primo non terminale da riscrivere è $A$! 
+
+Diremo allora che il parsing **fallisce** se $A$ è la testa di **almeno due produzioni**
+
+$$
+A\rightarrow\gamma| \delta
+$$
+
+tali che sia da $\gamma$ che da $\delta$ si possa derivare una stringa che inizi con $\alpha$ (il prossimo simbolo di input)
+
+Più formalmente: 
+
+$$
+
+\gamma \rightarrow a\gamma' \space\space\space\space\space \delta\rightarrow a\delta'
+
+$$
+
+Inoltre diremo che una grammatica $G$ **non** è LL(1) se _due produzioni portano al riconoscimento del prossimo simbolo in input_ (entrambe riconoscono il prossimo simbolo ma non necessariamente il riconoscimento completo dell'input).  
+
+
+### First e Follow 
+
+Data una grammatica $G=(N,T,P,S)$ e data una stringa $\alpha \in (N\cup T)^*$ si definisce come **$First(\alpha)$** l'insieme dei simboli terminali con cui può iniziare una frase derivabile da $\alpha$: 
+
+$$
+
+First(\alpha) = \{x\in T| \alpha \rightarrow x\beta,\space\beta\in T^*\} \cup \{\epsilon\}, se\space \space a\rightarrow^* \epsilon
+
+$$
+
+
+Data la stessa grammatica, definiamo $Follow(A)$ come l'insieme dei terminali che si possono trovare immediatamente alla destra di $A$ in una froma di frase di una qualche derivazione canonica (destra o sinstra)
+
+$$
+
+x \in Follow(A) \space \space se \space\space S\rightarrow \alpha Ax\beta \space\space\space con \space\space\space \alpha,\beta \in V^*
+
+$$
