--- a/Compilers/Frontend/7.parsingTopDown.md
+++ b/Compilers/Frontend/7.parsingTopDown.md
@@ -127,7 +127,7 @@ $$
 
 # Parser Predittivi: 
 
-I parser predittivi usano un certo numero di caratteri di LookAhead per deidere la prossima produzione da utilizzare. Questa strada può essere percorsa a seconda di come è strutturata la grammatica.  
+I parser predittivi usano un certo numero di caratteri di LookAhead per decidere la prossima produzione da utilizzare. Questa strada può essere percorsa a seconda di come è strutturata la grammatica.  
 
 Un parser predittivo può essere agevolmente realizzato per grammatiche di tipo ***LL(1)***.  
 LL(1) $\rightarrow$ Indica che input letto da sinistra, un carattere solo di lookahead e la derivazione prodotta è canonica sinistra.    
