Synchronization notes upadted

--- a/masters/HPC/Teoria/4.Synchronization.md
+++ b/masters/HPC/Teoria/4.Synchronization.md
@@ -124,3 +124,64 @@ unlock();
 currently @ 1:07 
 
 
+
+
+
+```asm
+// atomically load mem[addr] into R0 and set mem[addr] to 1
+ts R0, mem[addr] 
+
+lock:
+    ts R0, mem[addr] //load word into R0
+    bnz R0, #0       //if 0, lock obtained
+
+unlock:
+    st mem[addr], #0 // store 0 to address 
+
+```
+
+Questa implementazione di `test&set` genera tanto traffico, perchè sto mettendo nel mio programma una sequenza potenzialmente lunghissima di test e jump, problematico perchè se guardiamo il traffico delle transazioni (*traffico di coerenza della cache*) ci rendiamo conto che invalidiamo le linee di cache per i processori che provano ad acquisire il lock.  
+Il problema è quindi che in maniera continuativa sto andando a disturbare il protocollo di cache
+
+
+![test and set cache coherence traffic](../../images/testandset_cache_traffic.png)
+
+
+Bisogna trovare un modo per rendere più 'snella' questa operazione
+
+### Test&Test&Set Lock :
+
+Prima faccio un test, e solo quando il primo test mi dice che ho le condizioni per fare la test&set la eseguo (in quanto è relativamente costosa).  
+
+
+```c++
+
+void Lock(volatile int* lock){
+    while(1){
+        while(*lock != 0);
+        if (test&set(*lock) == 0)
+    }
+}
+
+void Unlock(volatile int* lock){
+    *lock = 0;
+}
+```
+
+Viene implementato con un `while(*lock != 0)`, che è una normale lettura. Lo controllo con una primitiva che non costa tanto (leggo la variabile `*lock` in maniera tradizionale, che ho in cache).   
+Continuo quindi a leggere il valore del lock in cache, tale valore cambierà solamente quando qualcuno farà release, in quanto:
+- Quando un thread fa release, il protocollo di cache coherence mi avviserà che il dato di `*lock` in cache è invalido, e a quel punto avrò il segnale che è cambiato il valore di quella variabile, e potrò fare la mia `test&set`, se riesco ad ottenre il lock, atomicamente lo blocco, se non riesco riparto dal controllare il valore di `*lock` in cache che costa poco.  
+
+La problematica di Fairness è ancora presente, ma garantisco di non impestare il sistema di bus con tante transazioni come illustrato dall'immagine sottostante.  
+
+
+![test&test&set](../../images/testandtestandset.png)
+
+
+
+
+# Consistency:
+
+La consistenza è una problematica che va uno step oltre la coerenza (di cache), in quanto non si tratta soltanto che i valori vengano correttamente propagati ma si tratta di definire una tempistica con cui la propagazione avviene.  
+I memory consistency models definiscono dei worst case al tempo con cui riteniamo lecito che il ritardo di propagazione avvenga.   
+
