--- a/masters/BigData/Teoria/DA1_2025_students.ipynb
+++ b/masters/BigData/Teoria/DA1_2025_students.ipynb
@@ -1697,10 +1697,8 @@
       "Salary column of female professors\n",
       "    salary     sex\n",
       "39  129000  Female\n",
-      "40  137000  Female\n",
-      "41   74830  Female\n",
-      "42   80225  Female\n",
-      "43   77000  Female\n"
+      "39    129000\n",
+      "Name: salary, dtype: int64\n"
      ]
     }
    ],
@@ -1720,8 +1718,6 @@
     "print(df_f_salary120.head(1))\n",
     "\n",
     "print(f'Female professors with salary over 120: {len(df_f_salary120)}')\n",
-    "\n",
-    "\n",
     "print('\\n\\nSalary column of female professors')\n",
     "print(df[df['sex'] == 'Female'][['salary','sex']].head(1))\n",
     "print(df[df['sex'] == 'Female']['salary'].head(1))"
@@ -1889,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1912,32 +1908,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sub dataframe in question\n",
+      "    rank discipline  phd  service   sex  salary\n",
+      "0   Prof          B   56       49  Male  186960\n",
+      "3   Prof          A   40       31  Male  131205\n",
+      "5   Prof          A   20       20  Male  122400\n",
+      "7   Prof          A   18       18  Male  126300\n",
+      "10  Prof          B   39       33  Male  128250\n",
+      "\n",
+      "\n",
       "Let us apply loc to a sub dataframe\n",
-      "    rank discipline  phd  service     sex  salary\n",
-      "0   Prof          B   56       49    Male  186960\n",
-      "3   Prof          A   40       31    Male  131205\n",
-      "5   Prof          A   20       20    Male  122400\n",
-      "7   Prof          A   18       18    Male  126300\n",
-      "10  Prof          B   39       33    Male  128250\n",
-      "11  Prof          B   23       23    Male  134778\n",
-      "13  Prof          B   35       33    Male  162200\n",
-      "14  Prof          B   25       19    Male  153750\n",
-      "15  Prof          B   17        3    Male  150480\n",
-      "19  Prof          A   29       27    Male  150500\n",
-      "26  Prof          A   38       19    Male  148750\n",
-      "27  Prof          A   45       43    Male  155865\n",
-      "29  Prof          B   21       20    Male  123683\n",
-      "31  Prof          B   22       21    Male  155750\n",
-      "35  Prof          B   28       23    Male  126933\n",
-      "36  Prof          B   45       45    Male  146856\n",
-      "39  Prof          B   18       18  Female  129000\n",
-      "40  Prof          A   39       36  Female  137000\n",
-      "44  Prof          B   23       19  Female  151768\n",
-      "45  Prof          B   25       25  Female  140096\n",
       "\n",
-      "\n",
-      "\n",
-      "Note that loc slicing refers to index values! It is not linked to row positions in the dataframe! \n",
+      "Note that loc slicing refers only to index values! It is not linked to row positions in the dataframe! \n",
       "    rank  salary\n",
       "10  Prof  128250\n",
       "11  Prof  134778\n",
@@ -1949,11 +1931,12 @@
     }
    ],
    "source": [
-    "print('Let us apply loc to a sub dataframe')\n",
+    "print('Sub dataframe in question')\n",
     "df_sub=df[df['salary']>120000]\n",
-    "print(df_sub.head(20))\n",
+    "print(df_sub.head(5))\n",
     "\n",
-    "print('\\n\\n\\nNote that loc slicing refers to index values! It is not linked to row positions in the dataframe! ')\n",
+    "print('\\n\\nLet us apply loc to a sub dataframe')\n",
+    "print('Note that loc slicing refers only to index values! It is not linked to row positions in the dataframe! \\n')\n",
     "print(df_sub.loc[10:20,['rank','salary']]) ##note that the first entry in the loc method refers to the index values"
    ]
   },
@@ -2003,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 152,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2027,7 +2010,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Let us now apply iloc on subdf\n",
+      "Let us now apply iloc on sub_df\n",
       "    rank discipline  phd\n",
       "26  Prof          A   38\n",
       "27  Prof          A   45\n",
@@ -2050,7 +2033,7 @@
     }
    ],
    "source": [
-    "print('Let us now apply iloc on subdf')\n",
+    "print('Let us now apply iloc on sub_df')\n",
     "\n",
     "print(df_sub.iloc[10:30,[0,1,2]])\n",
     "\n",
