--- a/masters/BigDataAnalytics/Lab/DA1_2025_students.ipynb
+++ b/masters/BigDataAnalytics/Lab/DA1_2025_students.ipynb
@@ -2107,6 +2107,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "swLSX60v9Sci"
    },
@@ -2116,7 +2123,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "min      57800\n",
+       "sum    8425855\n",
+       "Name: salary, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['salary'].agg(['min', 'sum'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "      <th>dollar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>2280.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3000</td>\n",
+       "      <td>3420.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary  dollar\n",
+       "0    1000  1140.0\n",
+       "1    2000  2280.0\n",
+       "2    3000  3420.0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.DataFrame({'salary': [1000, 2000, 3000]})\n",
+    "df2['dollar'] = df2['salary'].map(lambda x:x*1.14)\n",
+    "\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2280,7 +2378,7 @@
        "4  Prof          B   20       18  Male  104800   -0.113940"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3498,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3548,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3557,7 +3655,7 @@
      "text": [
       "Protocol message DatasetInfo has no \"info\" field.\n",
       "Archive:  body-fat-prediction-dataset.zip\n",
-      "  inflating: bodyfat.csv             \n"
+      "replace bodyfat.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
      ]
     }
    ],
@@ -3569,7 +3667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {
     "id": "UyHdt3Vxraft"
    },
@@ -3581,7 +3679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3750,7 +3848,7 @@
        "4  42.2   24.0    32.2     27.7   17.7  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
